
Fixed Games :
  Hammerfist (fire button),
  Automation 168 - Operation Clean Streets (prefetch in the CPU emulation)
  Impossible Mission II (some versions had the same prefetch issue in the CPU)
  Hades Nebula (fire button)

Fixed demos :
  Built-in Obsolescence (DSP stack overflow)
  Japtro and Rising Force by Holocaust (FDC, buggy loader)
  Delirious Demos IV (video, STE detection)


 Version 1.6.1 (2012-01-13):
 ---------------------------

This version is mainly a bugfix for 1.6.0, where monochrome mode
gave a black screen and was not usable.

Emulation:
- Fixes to bootup issues in monochrome mode
- Better left border removal timings
- DSP external memory access cycles taken into account

Other changes:
- Fix to allow build with Xcode 3.1.3/OS X 10.5.8 PPC
- Several fixes & updates needed to Hatari UI & hconsole
  for them to work correctly with Hatari v1.6.x
- Test programs added for testing TOS booting with different
  HW configurations and for finding out values needed in
  Hatari keymaps

Fixed Demos :
  Vodka Demo - Kill The Beast 2 (left border removal)


 Version 1.6.0 (2012-01-01):
 ---------------------------

The Hatari project has been moved from hatari.berlios.de to
http://hatari.tuxfamily.org/. Please update all bookmarks!

Emulation:
- More accurate FDC emulation (correct status bits and commands' timings,
  DMA transfer by blocks of 16 bytes, floppy change detection). This should
  fix a lot of non working games
- More accurate microwire clock emulation
- SCSI class 1 (ICD) command support for drives > 1 GB
- Improved color conversion table so that colors are a little bit brighter
- Improve shifter (add another method to do 4 pixel hardware scrolling,
    better emulation for 0 byte blank line)
- Some fixes to the IKBD emulation
- Better filters and model for sound emulation
- Correct VBL timings in TT monochrome (double clicking works now)
- More cycle accurate Falcon DSP <-> CPU emulation.  All the demos that