@@ -1315,6 +1315,13 @@ are just STE enhanced.  These are marked with '*'.</p>
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td>Dune/Sector One:
+      <a href="http://pouet.net/prod.php?which=59066">Antiques</a></td>
+      <td>1.6.2</td>
+      <td>The Greeting Parts requires Hatari 1.6.2 to work, it will flicker sometimes
+	  but that's a bug in the demo, not in Hatari</td>
+    </tr>
+    <tr>
       <td>Electronic Images:
       <a href="http://www.pouet.net/prod.php?which=21037">Music Dream II</a></td>
       <td>1.5</td>
